# MrBanana

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
api/: async_utils.py  constants.py  dependencies.py  log_utils.py  main.py  manager.py  scheduler.py  schemas.py  scrape_manager.py  scrape_worker.py  security.py  subscription_checker.py
api/routes/: download.py  library.py  player.py  player_open.py  scrape.py  search.py  subscription.py  system.py  version.py  ws.py
mr_banana/: __init__.py  cli.py  downloader.py
mr_banana/extractors/: __init__.py  base.py  jable.py
mr_banana/scraper/: __init__.py  file_scanner.py  media_info.py  merger.py  runner.py  text_utils.py  types.py
mr_banana/scraper/crawlers/: base.py  dmm.py  history_jable.py  javbus.py  javdb.py  javtrailers.py  subtitlecat.py  theporndb.py
mr_banana/scraper/writers/: nfo.py
mr_banana/utils/: browser.py  config.py  history.py  hls.py  logger.py  network.py  subscription.py  telegram.py  translate.py
scripts/: get_subtitle.py
tests/: conftest.py  test_api.py  test_config.py  test_crawlers.py  test_history.py  test_security.py  test_subscription_checker.py
userscripts/: mrbanana-helper.user.js
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  i18n.js  index.css  main.jsx  scrapeProgress.js
web/src/assets/: brush-clean.m4a  gear_11.m4a
web/src/components/: ContextMenu.jsx  EmptyState.jsx  (+15 more)
(+32 files in other folders)
