[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-banana"
version = "1.0.0"
authors = [
  { name = "cailurus"},
]
description = "Mr. Banana - 视频下载与刮削工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi>=0.9.0",
    "m3u8>=6.0.0",
    "patchright>=1.51.3",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
mr-banana = "mr_banana.cli:main"

[project.urls]
"Homepage" = "https://github.com/cailurus/mr-banana"

[tool.setuptools.packages.find]
include = ["mr_banana*", "api*"]
exclude = ["tests*", "web*", "static*", "logs*", "data*", "downloads*"]
